client/src/App.css
/* ... */
/**
 * Restore the focus styles unset by the previous rule.
 */
button:-moz-focusring,
[type='button']:-moz-focusring,
[type='reset']:-moz-focusring,
[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
 * Correct the padding in Firefox.
 */
fieldset {
  padding: 0.35em 0.75em 0.625em;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */
legend {
  box-sizing: border-box;
  /* 1 */
  color: inherit;
  /* 2 */
  display: table;
  /* 1 */
  max-width: 100%;
  /* 1 */
  padding: 0;
  /* 3 */
  white-space: normal;
  /* 1 */
}

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */
progress {
  vertical-align: baseline;
}

/**
 * Remove the default vertical scrollbar in IE 10+.
 */
textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */
[type='checkbox'],
[type='radio'] {
  box-sizing: border-box;
  /* 1 */
  padding: 0;
  /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */
[type='number']::-webkit-inner-spin-button,
[type='number']::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */
[type='search'] {
  -webkit-appearance: textfield;
  /* 1 */
  outline-offset: -2px;
  /* 2 */
}

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */
[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */
::-webkit-file-upload-button {
  -webkit-appearance: button;
  /* 1 */
  font: inherit;
  /* 2 */
}

/* Interactive
   ========================================================================== */
/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */
details {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */
summary {
  display: list-item;
}

/* Misc
   ========================================================================== */
/**
 * Add the correct display in IE 10+.
 */
template {
  display: none;
}

/**
 * Add the correct display in IE 10.
 */
[hidden] {
  display: none;
}

/* 
=================
END NORMALIZE CSS
=================
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body {
  min-height: 100%;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
    Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';
  font-size: 16px;
  color: #1a1a1a;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'JetBrains Mono', monospace;
  margin: 0 0 0.5rem;
  line-height: 1.25;
  color: #870a47;
}

h1 {
  font-size: 2.25rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1.5rem;
}

h5 {
  font-size: 1.25rem;
}

h6 {
  font-size: 1rem;
}

p {
  font-size: 1.1rem;
  margin: 0 0 1rem;
  line-height: 1.5;
}

ul,
ol,
dl {
  /* margin-top: 0; */
  margin-bottom: 1rem;
  text-decoration: none;
  list-style-type: none;
  margin-left: 2rem;
}

label {
  display: inline-block;
}

input,
select,
textarea,
button {
  margin: 0;
}

a {
  color: #b43a5f;
  text-decoration: none;
}

a:hover {
  color: #6a0a6a;
  text-decoration: underline;
}

/* HEIGHT / WIDTH UTILS */
.w-100 {
  width: 100%;
}

.w-75 {
  width: 75%;
}

.w-50 {
  width: 50%;
}

.w-25 {
  width: 25%;
}

.min-100-vh {
  min-height: 100vh;
}

.min-100-vw {
  min-width: 100vw;
}

/* MARGIN/PADDING UTILS */
/* Margin - all sides */
.m-0 {
  margin: 0 !important;
}

.m-1 {
  margin: 0.375rem !important;
}

.m-2 {
  margin: 0.625rem !important;
}

.m-3 {
  margin: 1rem !important;
}

.m-4 {
  margin: 1.375rem !important;
}

.m-5 {
  margin: 1.625rem !important;
}

.m-auto {
  margin: auto !important;
}

/* Margin-bottom */
.mb-0 {
  margin-bottom: 0 !important;
}

.mb-1 {
  margin-bottom: 0.375rem !important;
}

.mb-2 {
  margin-bottom: 0.625rem !important;
}

.mb-3 {
  margin-bottom: 1rem !important;
}

.mb-4 {
  margin-bottom: 1.375rem !important;
}

.mb-5 {
  margin-bottom: 1.625rem !important;
}

.mb-auto {
  margin-bottom: auto !important;
}

/* Margin-top */
.mt-0 {
  margin-top: 0 !important;
}

.mt-1 {
  margin-top: 0.375rem !important;
}

.mt-2 {
  margin-top: 0.625rem !important;
}

.mt-3 {
  margin-top: 1rem !important;
}

.mt-4 {
  margin-top: 1.375rem !important;
}

.mt-5 {
  margin-top: 1.625rem !important;
}

.mt-auto {
  margin-top: auto !important;
}

/* Margin-right */
.mr-0 {
  margin-right: 0 !important;
}

.mr-1 {
  margin-right: 0.375rem !important;
}

.mr-2 {
  margin-right: 0.625rem !important;
}

.mr-3 {
  margin-right: 1rem !important;
}

.mr-4 {
  margin-right: 1.375rem !important;
}

.mr-5 {
  margin-right: 1.625rem !important;
}

.mr-auto {
  margin-right: auto !important;
}

/* Margin-left */
.ml-0 {
  margin-left: 0 !important;
}

.ml-1 {
  margin-left: 0.375rem !important;
}

.ml-2 {
  margin-left: 0.625rem !important;
}

.ml-3 {
  margin-left: 1rem !important;
}

.ml-4 {
  margin-left: 1.375rem !important;
}

.ml-5 {
  margin-left: 1.625rem !important;
}

.ml-auto {
  margin-left: auto !important;
}

/* Margin - x axis */
.mx-0 {
  margin-right: 0 !important;
  margin-left: 0 !important;
}

.mx-1 {
  margin-right: 0.375rem !important;
  margin-left: 0.375rem !important;
}

.mx-2 {
  margin-right: 0.625rem !important;
  margin-left: 0.625rem !important;
}

.mx-3 {
  margin-right: 1rem !important;
  margin-left: 1rem !important;
}

.mx-4 {
  margin-right: 1.375rem !important;
  margin-left: 1.375rem !important;
}

.mx-5 {
  margin-right: 1.625rem !important;
  margin-left: 1.625rem !important;
}
/* ... */

